Adjust project container grid and add announcement dummy text

--- a/index.html
+++ b/index.html
@@ -67,34 +67,109 @@
             <div class="content">
                 <div class="project-container">
                     <div class="project">
-                        <h1>aaa</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus et a itaque. Voluptates blanditiis fuga minima modi, nostrum, vitae qui rerum quae obcaecati perspiciatis ipsam laborum, accusantium nesciunt at? Asperiores!</p>
-                        <img src="icons/star-plus.svg" height="20px"><img src="icons/share-variant.svg" height="20px">
+                        <div class="description">
+                            <h1>Project 1</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus et a itaque. Voluptates blanditiis fuga minima modi, nostrum, vitae qui rerum quae obcaecati perspiciatis ipsam laborum, accusantium nesciunt at? Asperiores!</p>
+                        </div>
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" height="20px"><img src="icons/share-variant.svg" height="20px">
+                            </div>
                     </div>
                     <div class="project">
-                        <h1>aaa</h1>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis, illum. Nulla perferendis quibusdam, temporibus dicta dolor rem deserunt, at eveniet corrupti est modi iste quisquam magni nihil iure saepe eos.</p>
+                        <div class="description">
+                            <h1>Project 2</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero laborum suscipit explicabo iste labore ab iure ad sunt, aut porro ratione ipsum similique recusandae magni. Alias possimus distinctio explicabo accusamus!</p>
+                        </div>
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" height="20px"><img src="icons/share-variant.svg" height="20px">
+                            </div>
                     </div>
                     <div class="project">
-                        <h1>aaa</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab delectus sequi illum animi consequuntur magni id, nihil corporis recusandae optio in quisquam impedit rerum, deleniti sit nisi consectetur quibusdam inventore!</p>
+                        <div class="description">
+                            <h1>Project 3</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt temporibus delectus maiores laborum vitae fuga vero neque, quisquam at numquam enim doloremque praesentium, repellat recusandae debitis architecto dolorum magnam earum.</p>
+                        </div>
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" height="20px"><img src="icons/share-variant.svg" height="20px">
+                            </div>
                     </div>
                     <div class="project">
-                        <h1>aaa</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem dolorum facere quasi placeat rerum possimus modi corrupti veritatis odit quibusdam impedit ab adipisci, sapiente aspernatur minima facilis, vel debitis harum.</p>
+                        <div class="description">
+                            <h1>Project 4</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At minima maxime sunt veritatis non sed a, totam, adipisci, deserunt ullam eaque? Harum omnis tempore est aspernatur nemo. Illo, esse atque.</p>
+                        </div>
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" height="20px"><img src="icons/share-variant.svg" height="20px">
+                            </div>
                     </div>
                     <div class="project">
-                        <h1>aaa</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam aut ipsam iste ducimus explicabo sint vitae. Totam qui iusto molestias nisi deserunt a, repudiandae maiores numquam, quos necessitatibus facere odit.</p>
+                        <div class="description">
+                            <h1>Project 5</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ad amet saepe, adipisci excepturi, voluptatem ducimus at odio eaque natus deleniti. Vel, modi? Hic placeat possimus, fuga quae quo dolorum.</p>
+                        </div>
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" height="20px"><img src="icons/share-variant.svg" height="20px">
+                            </div>
                     </div>
                     <div class="project">
-                        <h1>aaa</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci voluptatem sed quas placeat, a perferendis voluptatum. Laboriosam ipsam ex ducimus, pariatur quam nesciunt dignissimos aspernatur nisi quod. Atque, nulla exercitationem.</p>
+                        <div class="description">
+                            <h1>Project 6</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis culpa sunt molestiae quaerat repudiandae quasi, natus quis at debitis vitae accusamus ipsum voluptatum aut saepe assumenda commodi, eos, laborum cum?</p>
+                        </div>
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" height="20px"><img src="icons/share-variant.svg" height="20px">
+                            </div>
+                    </div>
+                    <div class="project">
+                        <div class="description">
+                            <h1>Project 7</h1>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem pariatur vero optio ullam illo voluptates nihil harum facilis molestiae excepturi eius nobis ducimus tempore, incidunt similique necessitatibus perspiciatis quam dolorum?</p>
+                        </div>
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" height="20px"><img src="icons/share-variant.svg" height="20px">
+                            </div>
+                    </div>
+                    <div class="project">
+                        <div class="description">
+                            <h1>Project 8</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, adipisci cupiditate quae natus numquam consequatur reiciendis similique alias quos explicabo sequi dolor asperiores cumque itaque nihil minima, culpa, nemo nesciunt.</p>
+                        </div>
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" height="20px"><img src="icons/share-variant.svg" height="20px">
+                            </div>
+                    </div>
+                    <div class="project">
+                        <div class="description">
+                            <h1>Project 9</h1>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit inventore totam delectus enim fugit animi ullam? Dolores facilis atque neque ratione corporis! Reiciendis omnis maiores tempore vel, eligendi sed natus.</p>
+                        </div>
+                            <div class="icons">
+                                <img src="icons/star-plus.svg" height="20px"><img src="icons/share-variant.svg" height="20px">
+                            </div>
                     </div>
                 </div>
                   
-                <div class="announcements">announcements</div>
-                <div class="trending">trending</div>
+                <div class="announcements">
+                    <h4>Announcements</h4>
+                    <div>
+                        <h3>Something</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum amet sint laboriosam tempore voluptatibus distinctio quibusdam minima</p>
+                        <hr>
+                        <h3>Something</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quas dolorum a reiciendis quia possimus fugit at sequi autem...</p>
+                        <hr>
+                        <h3>Something</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure assumenda quam sed corrupti quidem accusamus quas temporibus molestias nobis saepe...</p>
+                    </div>
+
+                </div>
+                <div class="trending">
+                    <h4>Trending</h4>
+                    <div>
+
+                    </div>
+
+                </div>
 
         
             </div>
