--- a/index.html
+++ b/index.html
@@ -160,22 +160,22 @@
                     <p>Trending</p>
                     <div class="trend-container">
                         <div class="topic">
-                            <img src="/icons/language-html5.svg" height="40px">
+                            <img src="icons/language-html5.svg" height="40px">
                             <p>@htmlarchitect</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                         <div class="topic">
-                            <img src="/icons/language-css3.svg" height="40px">
+                            <img src="icons/language-css3.svg" height="40px">
                             <p>@cssmagician</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                         <div class="topic">
-                            <img src="/icons/language-javascript.svg" height="40px">
+                            <img src="icons/language-javascript.svg" height="40px">
                             <p>@jswarrior</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                         <div class="topic">
-                            <img src="/icons/git.svg" height="40px">
+                            <img src="icons/git.svg" height="40px">
                             <p>@gitdoctor</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>               
